<resources>
    <string name="app_name">Mifos Pay</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="cancel_txt">Cancel</string>
    <string name="cvv">CVV</string>
    <string name="edit_card">Edit Card</string>
    <string name="delete_card">Delete Card</string>
    <string name="pan_id">PAN ID</string>
    <string name="otp">Enter OTP</string>
    <string name="level_1">Level 1</string>
    <string name="transaction_history">Transaction History</string>
    <string name="history">History</string>
    <string name="feature_profile_email">E-mail</string>
    <string name="level_1_description">Level 1 Description</string>
    <string name="completion">Completed</string>
    <string name="check">Checked</string>
    <string name="level_2">Level 2</string>
    <string name="level_2_description">Level 2 Description</string>
    <string name="level_3">Level 3</string>
    <string name="level_3_description">Level 3 Description</string>
    <string name="code">Code</string>
    <string name="feature_accounts_linked_bank_account">Linked bank accounts</string>
    <string name="feature_accounts_link_bank_account">Link Bank Account</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="add_card">Add Card</string>
    <string name="id_type">ID Type</string>
    <string name="vpaname">VPA</string>
    <string name="browse">Browse</string>
    <string name="feature_send_money_submit">Submit</string>
    <string name="credit_card_number">Credit Card Number</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="add">ADD</string>
    <string name="home">Home</string>
    <string name="payments">Payments</string>
    <string name="finance">Finance</string>
    <string name="profile">Profile</string>
    <string name="mifos_pay">Mifos Pay</string>
    <string name="login">Login</string>
    <string name="enter_name_or_vpa">Enter name or vpa</string>
    <string name="balance_hint">Total balance</string>
    <string name="show_more">Show more</string>
    <string name="invoices">Invoices</string>
    <string name="request">Request</string>
    <string name="bank_account">Bank Account</string>
    <string name="qr_code">QR code</string>
    <string name="feature_profile_personal_qr_code">Personal QR Code</string>
    <string name="complete_kyc">Complete the KYC process</string>
    <string name="saved_cards">Saved Cards</string>
    <string name="qr_code_details">QR code details</string>
    <string name="user_details">User details</string>
    <string name="send_money">Send money</string>
    <string name="sending_to">Sending to</string>
    <string name="feature_passcode_cancel">Cancel</string>
    <string name="feature_accounts_confirm">Confirm</string>
    <string name="feature_send_money_send">Send</string>
    <string name="feature_accounts_add_account">ADD ACCOUNT</string>
    <string name="vpa_mobile_number">VPA/ Mobile Number</string>
    <string name="feature_profile_proceed">Proceed</string>
    <string name="scan_code">Scan Code</string>
    <string name="receive">Receive</string>
    <string name="virtual_payment_address_vpa">Virtual Payment Address (VPA)</string>
    <string name="show_code">Show code</string>
    <string name="unique_receipt_link">Unique Receipt Link : </string>
    <string name="invoice_details">Invoice details</string>
    <string name="payment_options_will_be_fetched_from_upi">Payment Options (will be fetched from
        UPI)
    </string>
    <string name="unique_payment_link">Unique Payment Link</string>
    <string name="view_receipt">View Receipt</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="create_one">Create one</string>
    <string name="enter_mobile_number_description">It should be currently activated on your device
        and linked with your bank account as well.
    </string>
    <string name="enter_otp_received_on_your_registered_device">Enter otp received on your registered device</string>
    <string name="complete_your_registration">Complete your registration</string>
    <string name="feature_send_money_virtual_payment_address">Virtual Payment Address</string>
    <string name="send_via">Send via</string>
    <string name="feature_accounts_verify_mobile_number">Verify Mobile Number</string>
    <string name="feature_accounts_confirm_mobile_number_message">To confirm your mobile number \n we need to send an
        SMS from \n your phone*
    </string>
    <string name="choose_your_sim">Please choose your SIM</string>
    <string name="feature_accounts_choose_a_sim">Please choose a SIM</string>
    <string name="feature_accounts_regular_charges_will_apply">*Regular charges will apply</string>
    <string name="send_sms">Send SMS</string>
    <string name="feature_accounts_or">or</string>
    <string name="feature_accounts_bank_account_mobile_verification_conditions">Make sure that the following
        conditions are met: \n1. Mobile Number is linked with your Bank Account. \n2. Mobile Number
        is
        registered on MifosPay. \n3. It\'s sim is on this device.
    </string>
    <string name="okay">Okay</string>
    <string name="trusted_merchants">Trusted Merchants</string>
    <string name="field_required">Field Required</string>
    <string name="card_expiry_message">Your card has expired</string>
    <string name="create_an_account">Create an account</string>
    <string name="sign_up_as_merchant">Sign up as merchant</string>
    <string name="sign_up_as_customer">Sign up as customer</string>
    <string-array name="months_array">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string name="label_select_picture">Select picture</string>
    <string name="feature_accounts_setup_upi">Setup UPI</string>
    <string name="feature_accounts_change_upi_pin">Change UPI PIN</string>
    <string name="feature_accounts_forgot_upi_pin">Forgot UPI PIN</string>
    <string name="feature_accounts_delete_bank">Delete Bank</string>
    <string name="link_your_bank_account">Link Your Bank Account</string>
    <string name="feature_accounts_no_linked_bank_accounts">No Linked Bank Accounts</string>
    <string name="editable_image_hint">Editable image hint</string>
    <string name="change_password">Change Password</string>
    <string name="change_passcode">Change Passcode</string>
    <string name="current_passcode">Current Passcode</string>
    <string name="new_passcode">New Passcode</string>
    <string name="confirm_new_passcode">Confirm New Passcode</string>
    <string name="change_email">Change Email</string>
    <string name="change_mobile_number">Change Mobile Number</string>
    <string name="items_bought">items bought</string>
    <string name="status">status</string>
    <string name="transaction_id">Transaction ID : </string>
    <string name="transaction_date">Transaction Date : </string>
    <string name="transaction_success">Transaction successful</string>
    <string name="transaction_unable_to_process">Unable to process transfer</string>
    <string name="to">To:</string>
    <string name="from">From:</string>
    <string name="date">date</string>
    <string name="link">link</string>
    <string name="no_invoices_found">No invoices found</string>
    <string name="feature_accounts_popular_banks">Popular Banks</string>
    <string name="feature_accounts_other_banks">Other Banks</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="verifying_otp_please_wait">Verifying OTP. Please wait..</string>
    <string name="notification_setting">Notification Setting</string>
    <string name="disable_account">Disable account</string>
    <string name="log_out">Log out</string>
    <string name="debit_card_details">Debit Card Details</string>
    <string name="debit_card_error_message">Invalid Debit Card Number</string>
    <string name="one_time_password">One Time Password</string>
    <string name="upi_pin_setup">UPI PIN Setup</string>
    <string name="all_fields_are_mandatory">All fields are mandatory.</string>
    <string name="mandatory">Mandatory field</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="feature_profile_username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="name_of_business">Name of Business</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="client_name">client name</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="pin_code">Pin Code</string>
    <string name="state">State</string>
    <string name="no_transactions_found">No transactions found</string>
    <string name="feature_profile_click_profile_picture">Click profile picture</string>
    <string name="feature_profile_change_profile_picture">Pick profile picture from device</string>
    <string name="need_camera_permission_to_click_profile_picture">Need camera permission to click profile picture</string>
    <string name="feature_profile_remove_profile_picture">Remove profile picture</string>
    <string name="sign_up_as">Sign up as</string>
    <string name="merchant">Merchant</string>
    <string name="customer">Customer</string>
    <string name="ease_my_sign_up_using_google_account">Ease my sign up using Google Account</string>
    <string name="next">Next</string>
    <string name="account">account</string>
    <string name="subitem">SubItem</string>
    <string name="no_saved_cards_found">No saved cards found</string>
    <string name="debit_card_number">Debit Card Number</string>
    <string name="mm">MM</string>
    <string name="mm_yy">MM/YY</string>
    <string name="slash">/</string>
    <string name="feature_accounts_search">Search</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="feature_send_money_vpa">VPA</string>
    <string name="enter_upi_pin">Enter UPI PIN</string>
    <string name="notifications">Notifications</string>
    <string name="feature_accounts_bank_name">Bank Name</string>
    <string name="feature_accounts_ac_holder_name">A/C Holder Name</string>
    <string name="feature_accounts_branch_name">Branch Name</string>
    <string name="feature_accounts_ifsc">IFSC</string>
    <string name="feature_accounts_type">Type</string>
    <string name="feature_profile_edit_profile">Edit Profile</string>
    <string name="faq">FAQ</string>
    <string name="frequently_asked_questions">Frequently Asked Question</string>
    <string name="feature_profile_settings">Settings</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="passcode_title">Passcode will be reset, are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no_notification_found">No Notifications Found</string>
    <string name="wrong_otp">Wrong OTP</string>
    <string name="reenter_upi">Re-enter UPI PIN</string>
    <string name="upi_pin_mismatch">UPI PIN mismatch</string>
    <string name="Invalid_UPI_PIN">Invalid UPI PIN</string>
    <string name="enter_upi_length_4">Enter UPI PIN of length 4</string>
    <string name="no">No</string>
    <string name="enter_valid_mob_num">Enter a valid mobile number</string>
    <string name="invalid_link">Invalid link used to open the App.</string>
    <string name="fetching">Fetching…</string>
    <string name="accounts">Accounts</string>
    <string name="hide_balance">Hide Balance</string>
    <string name="fetching_history">Fetching History...</string>
    <string name="invoice">Invoice</string>
</resources>