<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright 2024 Mifos Initiative

    This Source Code Form is subject to the terms of the Mozilla Public License, v. 2.0.
    If a copy of the MPL was not distributed with this file,
    You can obtain one at https://mozilla.org/MPL/2.0/.

    See https://github.com/openMF/mobile-wallet/blob/master/LICENSE.md
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_home"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        app:showAsAction="always|withText"/>
    <item
        android:id="@+id/action_payments"
        android:enabled="true"
        android:icon="@drawable/ic_swap_horiz"
        android:title="@string/payments"
        app:showAsAction="always|withText"/>
    <item
        android:id="@+id/action_finance"
        android:enabled="true"
        android:icon="@drawable/ic_finance"
        android:title="@string/finance"
        app:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/action_profile"
        android:enabled="true"
        android:icon="@drawable/ic_person"
        android:title="@string/profile"
        app:showAsAction="ifRoom|withText"/>

</menu>