<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:focusedByDefault="true"
    android:orientation="vertical"
    android:layout_marginHorizontal="@dimen/Mifos.DesignSystem.Spacing.screenHorizontalMargin"
    android:paddingVertical="@dimen/Mifos.DesignSystem.Spacing.screenVerticalMargin">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_fName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_fName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_name"
            android:nextFocusForward="@id/et_lName"
            android:singleLine="true"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_lName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/Mifos.DesignSystem.Spacing.marginBetweenItemsSmall"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_lName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name"
            android:nextFocusForward="@id/et_card_number"
            android:singleLine="true"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_card_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/Mifos.DesignSystem.Spacing.marginBetweenItemsSmall"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_card_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/credit_card_number"
            android:inputType="number"
            android:nextFocusForward="@id/spn_mm"
            android:singleLine="true"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/Mifos.DesignSystem.Spacing.marginBetweenItemsSmall"
        style="@style/TextAppearance.Material3.TitleSmall"
        android:text="@string/expiry_date"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/Mifos.DesignSystem.Spacing.marginBetweenItemsSmall"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/spn_mm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/months_array"
            android:padding="@dimen/Mifos.DesignSystem.Spacing.CardInnerPadding"/>

        <Spinner
            android:id="@+id/spn_yy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/Mifos.DesignSystem.Spacing.CardInnerPadding"/>

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_cvv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/Mifos.DesignSystem.Spacing.marginBetweenItemsSmall"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_cvv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/cvv"
            android:inputType="numberPassword"
            android:maxLength="3"
            android:minWidth="@dimen/Mifos.DesignSystem.Size.SmallerTextFieldWidth"
            android:nextFocusForward="@id/btn_add"/>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/Mifos.DesignSystem.Spacing.marginBetweenItemsLarge"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_txt"
            style="@style/Widget.Material3.Button.OutlinedButton"/>

        <Button
            android:id="@+id/btn_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/Mifos.DesignSystem.Spacing.marginBetweenItemsMedium"
            android:text="@string/add"/>

    </LinearLayout>
</LinearLayout>
