<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/Mifos.DesignSystem.Spacing.screenHorizontalMargin"
    android:paddingVertical="@dimen/Mifos.DesignSystem.Spacing.screenVerticalMargin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/receive"
        style="@style/Mifos.DesignSystem.TextStyle.PrimaryColorBodyLarger"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/Mifos.DesignSystem.Spacing.marginBetweenItemsLarge"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.Material3.LabelLarge"
                android:text="@string/virtual_payment_address_vpa"/>

            <TextView
                android:id="@+id/tv_client_vpa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="fwef3w"
                style="@style/TextAppearance.Material3.BodyLarge"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/Mifos.DesignSystem.Spacing.marginBetweenItemsSmall"
                style="@style/TextAppearance.Material3.LabelLarge"
                android:text="@string/mobile_number"/>

            <TextView
                android:id="@+id/tv_client_mobile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="+911234567890"
                style="@style/TextAppearance.Material3.BodyLarge"/>

        </LinearLayout>


        <TextView
            android:id="@+id/btn_show_qr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:text="@string/show_code"
            style="@style/Mifos.DesignSystem.TextStyle.PrimaryColorBody"
            app:drawableTopCompat="@drawable/qrcode_blue_selector" />

    </LinearLayout>

</LinearLayout>