<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/cc_home_screen"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="org.mifos.mobilewallet.mifospay.home.ui.MainActivity"

    >

    <TextView
        android:id="@+id/tv_account_balance"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top"
        android:layout_marginTop="@dimen/marginBetweenLogoAndLoginInput"
        android:text="@string/fetching"
        android:textColor="?attr/colorPrimary"
        style="@style/TextAppearance.Material3.DisplaySmall"
        app:fontFamily="@font/montserrat" />

    <TextView
        android:layout_gravity="center|bottom"
        app:layout_anchorGravity="bottom|center_horizontal"
        app:layout_anchor="@id/tv_account_balance"
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/balance_hint"
        android:textAllCaps="true"
        android:alpha="@dimen/alpha_low_emphasis"
        style="@style/TextAppearance.Material3.LabelSmall" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hide_balance"
        style="@style/TextAppearance.Material3.TitleMedium"
        android:id="@+id/tv_hide_balance"
        android:layout_marginTop="40dp"
        android:fontFamily="sans-serf-black"
        android:textColor="?attr/colorPrimary"
        android:visibility="gone"
        android:layout_gravity="center|bottom"
        app:layout_anchorGravity="bottom|center_horizontal"
        app:layout_anchor="@id/textView8"/>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nsv_home_bottom_sheet_dialog"
        app:layout_behavior="@string/bottom_sheet_behavior"
        android:layout_width="match_parent"
        android:background="@drawable/drawable_bottom_sheet_view"
        app:behavior_hideable="false"
        app:behavior_peekHeight="@dimen/bottomSheetPeekHeight"
        android:layout_height="match_parent" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_gravity="center_horizontal"
                android:id="@+id/shape_bottom_sheet_dialog_grip"
                app:srcCompat="@drawable/shape_bottom_sheet_dialog_grip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginItemsInSectionSmall" />

            <TextView
                android:layout_gravity="center_horizontal"
                android:id="@+id/dialog_home_bottom_sheet_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginItemsInSectionSmall"
                android:text="@string/transaction_history"

                android:textSize="@dimen/textBody1" />

            <ProgressBar
                android:id="@+id/pb_loading_history"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/value_250dp"
                android:layout_gravity="center_horizontal"
                android:indeterminate="true" />

            <TextView
                android:id="@+id/tv_loading_history"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/fetching_history"
                android:textColor="?attr/colorPrimary"
                android:textSize="@dimen/textH6"
                app:fontFamily="@font/montserrat" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_home_bottom_sheet"
                android:layout_height="0dp"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_marginTop="24dp"
                android:scrollbars="vertical"
                />

            <include android:id="@+id/inc_empty_transactions_state_view"
                android:layout_height="0dp"
                android:visibility="gone"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/marginItemsInSectionLarge"
                android:layout_width="match_parent"
                android:layout_weight="1"
                layout="@layout/placeholder_state" />

            <Button
                android:visibility="gone"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_gravity="center_horizontal"
                android:id="@+id/btn_home_bottom_sheet_action"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginItemsInSectionLarge"
                android:layout_marginBottom="@dimen/marginItemsInSectionSmall"
                android:text="@string/show_more" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>